--- a/OnlineStoreMVC/Views/Shared/_HeaderPartial.cshtml
+++ b/OnlineStoreMVC/Views/Shared/_HeaderPartial.cshtml
@@ -87,7 +87,7 @@
     </div>
 </div>
 <!-- //banner-top -->
-<div class="container">
+<div class="container b-mainbrand-topmenu">
     <div class="row">
         @{
             var categoriesList = ViewBag.TopCategoriesList as IEnumerable<OnlineStore.Model.ViewModel.SummaryCategoryViewModel>;
