--- a/OnlineStoreMVC/Areas/Admin/Views/Brand/Create.cshtml
+++ b/OnlineStoreMVC/Areas/Admin/Views/Brand/Create.cshtml
@@ -24,7 +24,7 @@
                     <h3 class="box-title">Tạo mới thương hiệu</h3>
                 </div>
                 <div class="box-body">
-                    @using (Html.BeginForm())
+                    @using (Html.BeginForm("Create","Brand", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
                     {
                         <div class="form-horizontal">
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -35,7 +35,12 @@
                                     @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                                 </div>
                             </div>
-
+                            <div class="form-group">
+                                @Html.Label("Ảnh đại diện", new { @class = "control-label col-md-2" })
+                                <div class="col-md-10">
+                                    <input type="file" id="coverImage" name="coverImage" />
+                                </div>
+                            </div>
                             <div class="form-group">
                                 @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
                                 <div class="col-md-10">
