--- a/OnlineStoreMVC/Content/display-product/display-product-view.css
+++ b/OnlineStoreMVC/Content/display-product/display-product-view.css
@@ -117,6 +117,8 @@ ul.product_list.grid > li .product-container .product-image-container.image-cont
 .listbranch-displayproduct{
     padding:10px;
     display:block;
+    height:400px;
+    overflow-y:auto;
 }
 .listbranch-displayproduct>ul{
     list-style:none;
@@ -157,6 +159,10 @@ ul.product_list.grid > li .product-container .product-image-container.image-cont
     display:block;
     height:20px;
     margin:10px 0 5px 0;
+}
+
+.productlist-displayproduct{
+    min-height:900px;
 }
 
 /* end filter panel*/
