--- a/OnlineStoreMVC/Views/Home/Contact.cshtml
+++ b/OnlineStoreMVC/Views/Home/Contact.cshtml
@@ -56,7 +56,7 @@
             </div>
             <div class="clearfix"> </div>
         </div>
-        <div class="map wow fadeInDown animated" data-wow-delay=".5s">
+        <div class="map wow fadeInDown animated" data-wow-delay=".5s" style="padding:20px;">
             <h3 class="tittle">Vị Trí</h3>
             <div id="map"></div>
         </div>
