--- a/OnlineStoreMVC/Views/Home/Index.cshtml
+++ b/OnlineStoreMVC/Views/Home/Index.cshtml
@@ -68,7 +68,7 @@
     <!-- content -->
    
     <div ng-controller="ecom_Main_Controller as ctrl" class="product-easy">
-        <div class="brands-bar">
+        <div class="container">
             @Html.Action("GetListBrands")
         </div>
         <div class="container groupproduct-panel">
