--- a/OnlineStoreMVC/Views/Shared/_FooterPartial.cshtml
+++ b/OnlineStoreMVC/Views/Shared/_FooterPartial.cshtml
@@ -87,7 +87,7 @@
                 <div class="col-md-4 sign-gd-two">
                     <h4>Thông Tin Liên Hệ</h4>
                     <ul>
-                        <li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>Địa Chỉ : Hải Châu, <span> Đà Nẵng.</span></li>
+                        <li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>Địa Chỉ : Hải Châu, <span> Đà Nẵng</span></li>
                         <li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i>Email : <a href="mailto:info@example.com">info@example.com</a></li>
                         <li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>Điện Thoại : +1234 567 567</li>
                     </ul>
