--- a/OnlineStoreMVC/Areas/Admin/Views/Brand/Edit.cshtml
+++ b/OnlineStoreMVC/Areas/Admin/Views/Brand/Edit.cshtml
@@ -26,7 +26,7 @@
                     <h3 class="box-title">Cập nhật danh mục thương hiệu</h3>
                 </div>
                 <div class="box-body">
-                    @using (Html.BeginForm())
+                    @using (Html.BeginForm("Edit", "Brand", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
                     {
                         <div class="form-horizontal">
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -45,6 +45,14 @@
                                 <div class="col-md-9">
                                     @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
                                     @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                @Html.Label("Ảnh đại diện", new { @class = "control-label col-md-3" })
+                                <div class="col-md-9">
+                                    <img src="@Model.ImagePath" alt="logo thương hiệu" style="width:150px;"/>
+                                    <input type="file" id="coverImage" name="coverImage" />
                                 </div>
                             </div>
 
