fixed banner 2 display not full image

--- a/OnlineStoreMVC/Views/Home/GroupProductPatial.cshtml
+++ b/OnlineStoreMVC/Views/Home/GroupProductPatial.cshtml
@@ -14,7 +14,7 @@
             }
         </div>
     </div>
-    <div class="products-groupproduct wrap" style="display: block; width: 100%; margin: 0px;">
+    <div class="products-groupproduct wrap divProductBanner" style="display: block; width: 100%; margin: 0px;">
         <div class="owl-carousel owl-theme">
             @foreach (var item in Model.products)
             {
