--- a/OnlineStoreMVC/Content/webcss/style.css
+++ b/OnlineStoreMVC/Content/webcss/style.css
@@ -8,7 +8,7 @@ html, body{
 	margin:0;
 	font-size: 100%;
 	/*font-family: 'Lato', sans-serif;*/
-    font-family:Helvetica,Arial,sans-serif
+    font-family:Helvetica,Arial,sans-serif;
 	background: #fff;
 }
 body a {
@@ -688,6 +688,10 @@ top: 9%;
 a.callbacks_nav.callbacks2_nav.next {
 right: 0% !important;
 top: 9%;
+}
+
+.divProductBanner .owl-stage-outer{
+    width: 100%;
 }
 /*-- Slider part Ends Here --*/
 /*-- //banner --*/
