--- a/OnlineStoreMVC/Views/Product/SearchResult.cshtml
+++ b/OnlineStoreMVC/Views/Product/SearchResult.cshtml
@@ -27,7 +27,7 @@
                 </div>
                 <div class="clearfix"></div>
             </div>
-            <div class="productlist-displayproduct">
+            <div class="productlist-displayproduct product-searchresult">
                 @Html.Partial("ListProduct", Model.Products)
             </div>
             <div class="clearfix"></div>
