Updtae layout for new requirement

--- a/OnlineStoreMVC/Areas/Admin/Views/Product/Create.cshtml
+++ b/OnlineStoreMVC/Areas/Admin/Views/Product/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model OnlineStore.Model.MessageModel.CreateProductPostRequest
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Thêm sản phẩm mới";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Content/ckeditor/ckeditor.js"></script>
@@ -61,6 +61,14 @@
                                 <div class="col-md-10">
                                     @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
                                     @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.OldPrice, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-10">
+                                    @Html.EditorFor(model => model.OldPrice, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.OldPrice, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
