--- a/OnlineStoreMVC/Views/Shared/_ListBrands.cshtml
+++ b/OnlineStoreMVC/Views/Shared/_ListBrands.cshtml
@@ -51,8 +51,12 @@
     text-decoration: none;
     color: #333333;
 }
+.b-brandlist-horizontalbar{
+    display:block;
+    width:100%;
+}
 </style>
-<div class="b-brandlist-horizontalbar" style="display:block;width:100%;">
+<div class="b-brandlist-horizontalbar">
     <div class="owl-carousel owl-theme">
         @foreach (var brand in Model)
         {
