--- a/OnlineStoreMVC/Areas/Admin/Views/Product/Edit.cshtml
+++ b/OnlineStoreMVC/Areas/Admin/Views/Product/Edit.cshtml
@@ -65,6 +65,14 @@
                                         </div>
                                     </div>
 
+                                    <div class="form-group">
+                                        @Html.LabelFor(model => model.OldPrice, htmlAttributes: new { @class = "control-label col-md-2" })
+                                        <div class="col-md-10">
+                                            @Html.EditorFor(model => model.OldPrice, new { htmlAttributes = new { @class = "form-control" } })
+                                            @Html.ValidationMessageFor(model => model.OldPrice, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+
                                     @*<div class="form-group">
                                         @Html.LabelFor(model => model.Quantity, htmlAttributes: new { @class = "control-label col-md-2" })
                                         <div class="col-md-10">
